# semver-test

./: README.md  pyproject.toml
src/: __main__.py
