
[tool.poetry]
name = "semver-test"
version = "0.1.0"
description = "Test semantic versioning process with a python project"
authors = ["user <user@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
python-semantic-release = "^7.19.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
